<resources>
    <string name="app_name">Sportlight</string>

    <!--Navigation Menu -->
    <string name="nav_home">Ground</string>
    <string name="nav_events">Feeds</string>
    <string name="nav_utils">Home</string>
    <string name="nav_notification">Bookmarks</string>
    <string name="nav_profile">Profile</string>

    <!--App Bar Menu -->
    <string name="nav_search">Search</string>
    <string name="nav_share">Share</string>
    <string name="nav_add_event">Add</string>

    <!-- Connection Strings -->
    <string name="database_url">https://ec2-35-154-164-164.ap-south-1.compute.amazonaws.com</string>
    <string name="booking_url">https://ec2-13-127-175-49.ap-south-1.compute.amazonaws.com</string>
    <string name="checkout_url">https://ec2-15-206-69-192.ap-south-1.compute.amazonaws.com</string>
    <string name="socialmedia_url">https://ec2-35-154-164-164.ap-south-1.compute.amazonaws.com</string>


    <!-- No Internet Activity -->
    <string name="no_internet_retry">Retry</string>

    <!-- Email Addresses -->
    <string name="email_sender">tech@roninaks.com</string>
    <string name="email_tech_support">tech@roninaks.com</string>
    <string name="email_admin">tech@roninaks.com</string>
    <string name="email_all">tech@roninaks.com</string>
</resources>
